--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,17 @@ services:
       - "8080:8080"
     volumes:
       - ./src:/tmp/hapi-fhir-jpaserver-starter/src/
+
+  db:
+    image: postgres
+    environment: 
+      POSTGRES_PASSWORD: hapi
+      POSTGRES_USER: hapi
+      POSTGRES_DB: fhir
+    ports:
+      - 5000:5432
+    volumes: 
+      - fhirData:/var/lib/postgresql/data
+
+volumes: 
+  fhirData:
