--- a/src/main/resources/hapi.properties
+++ b/src/main/resources/hapi.properties
@@ -35,10 +35,10 @@ logger.name=fhirtest.access
 logger.format=Path[${servletPath}] Source[${requestHeader.x-forwarded-for}] Operation[${operationType} ${operationName} ${idOrResourceName}] UA[${requestHeader.user-agent}] Params[${requestParameters}] ResponseEncoding[${responseEncodingNoDefault}]
 logger.error_format=ERROR - ${requestVerb} ${requestUrl}
 logger.log_exceptions=true
-datasource.driver=org.h2.Driver
-datasource.url=jdbc:h2:file:./target/database/h2
-datasource.username=
-datasource.password=
+datasource.driver=org.postgresql.Driver
+datasource.url=jdbc:postgresql://db:5432/fhir
+datasource.username=hapi
+datasource.password=hapi
 server.name=Local Tester
 server.id=home
 test.port=
@@ -75,7 +75,7 @@ fhirpath_interceptor.enabled=false
 ###################################################
 # Database Settings
 ###################################################
-hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 hibernate.search.model_mapping=ca.uhn.fhir.jpa.search.LuceneSearchMappingFactory
 hibernate.format_sql=false
 hibernate.show_sql=false
