--- a/src/main/resources/hapi.properties
+++ b/src/main/resources/hapi.properties
@@ -95,10 +95,10 @@ tester.config.refuse_to_fetch_third_party_urls=false
 # Note that using ElasticSearch is disabled by
 # default and the server will use Lucene instead.
 ##################################################
-elasticsearch.enabled=false
-elasticsearch.rest_url=http://localhost:9200
-elasticsearch.username=SomeUsername
-elasticsearch.password=SomePassword
+elasticsearch.enabled=true
+elasticsearch.rest_url=http://elasticsearch:9200
+elasticsearch.username=
+elasticsearch.password=
 elasticsearch.required_index_status=YELLOW
 elasticsearch.schema_management_strategy=CREATE
 # Immediately refresh indexes after every write. This is very bad for
